test/files/neg/t696.check
t696.scala:5: error: diverging implicit expansion for type TypeUtil0.Type[Any]

Implicit search stack:
seeking type `TypeUtil0.Type[Any]` with method WithType in object TypeUtil0
  seeking type `TypeUtil0.Type[Any]` with method WithType in object TypeUtil0
    seeking type `TypeUtil0.Type[Any]` with method WithType in object TypeUtil0

  as[Any](null)
         ^
t696.scala:6: error: diverging implicit expansion for type TypeUtil0.Type[X]

Implicit search stack:
seeking type `TypeUtil0.Type[X]` with method WithType in object TypeUtil0
  seeking type `TypeUtil0.Type[S]` with method WithType in object TypeUtil0
    seeking type `TypeUtil0.Type[S]` with method WithType in object TypeUtil0

  def foo[X]() = as[X](null)
                      ^
two errors found
